# king-of-time

./: .pre-commit-config.yaml  Cargo.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: main.rs
