[package]
name = "king-of-time"
version = "0.1.0"
edition = "2021"

[dependencies]
kingtime = "0.0.3"
lambda_http = "0.9.0"
lambda_runtime = "0.8.3"
serde = "1.0.136"
serde_json = "1.0.108"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
